worked on horizontal scrolling issues

--- a/public/drawStyle.css
+++ b/public/drawStyle.css
@@ -288,3 +288,250 @@ nav ul li #loginButton:hover {
   border-color: #000;
   color: #FFF;
 }
+
+
+
+
+.dropdown, #tabletNav{
+  display: none;
+}
+
+
+
+
+@media screen and (max-width: 1127px) { 
+
+  #desktopNav, #logButton {
+    display: none;
+   }
+
+   #tabletNav {
+    display: block;
+  }
+
+  #tabletNav ul {
+    text-align: center;
+  }
+  
+  #tabletNav li {
+    display: inline-block;
+    margin: 1%;
+  }
+
+  #tabletNav ul li a {
+    margin: 10px 2px;
+    margin-left: 0px;
+    font-size: 22px;
+    padding: 5px;
+    width: 100px;
+  }
+  
+  #tabletNav ul a {
+    background-color: rgba(2, 75, 57, 0.651);
+    border-color: #000;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+    text-align: center;
+    text-decoration: none;
+    color: #FFF;
+    padding: 0 20px;
+    font-size: 125%;
+    display: block;
+    box-shadow: 0 1px 2px rgba(34, 25, 25, 0.8);
+  }
+  
+  #tabletNav ul a:hover {
+    background-color: #8A0000;
+    border-color: #000;
+    border-width: 1px;
+    border-style: solid;
+    border-radius: 5px;
+    color: #FFF;
+  } 
+
+  main {
+    width: auto;
+  }
+
+  #displaySearchResults, #displaySearchResults2 {
+    width: auto;
+  }
+
+  #tabletNav #loginButtonNav {
+    background-color: rgb(79, 48, 48);
+    border: none;
+    color: #4CAF50;
+    padding-top: 30px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    border-radius: 5px;
+  
+  }
+  
+  #tabletNav #loginButtonNav:hover {
+    background-color: #8A0000;
+    border-color: #000;
+    color: #FFF;
+  }
+
+}
+
+@media screen and (max-width: 1112px) { 
+  #tabletNav {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 1092px) { 
+  .drawing-board {
+    width: 700px;
+  }
+}
+
+@media screen and (max-width: 1022px) { 
+  .drawing-board {
+    width: 600px;
+  }
+}
+
+@media screen and (max-width: 940px) { 
+
+  header h1 {
+    font-size: 50px;
+  }
+
+  .container {
+    width: 800px;
+  }
+
+  #columns { 
+   column-gap: 0px;
+   margin-left: 0px;
+ }
+  #columns figure { width: 100%; }
+
+  #desktopNav {
+   display: none;
+  }
+
+  #tabletNav {
+    display: none;
+   }
+
+  #logButton {
+    display: none;
+  }
+
+  #intro h3, h4 {
+    top: 10px;
+  }
+  
+  .dropdown {
+    display: inline-block;
+    margin-top: 10px;
+    position: relative;
+    left: 35%;
+  }
+  
+  button{
+    border:none;
+    border-radius:5px;
+    padding:15px 30px;
+    font-size:18px;
+    cursor:pointer;
+  }
+  
+  button:hover{
+    background-color:#ddd;
+  }
+  
+  .dropdown-options {
+    display: none;
+    position: absolute;
+    overflow: auto;
+    background-color:#fff;
+    border-radius:5px;
+    box-shadow: 0px 10px 10px 0px rgba(0,0,0,0.4);
+  }
+  
+  .dropdown:hover .dropdown-options {
+    display: block;
+  }
+  
+  .dropdown-options a {
+    display: block;
+    color: #000000;
+    padding: 5px;
+    text-decoration: none;
+    padding:20px 40px;
+  }
+  
+  .dropdown-options a:hover {
+    color: #0a0a23;
+    background-color: #ddd;
+    border-radius:5px;
+  }
+  
+  @media screen and (max-width: 842px) {
+
+    header h1 {
+      font-size: 50px;
+    }
+
+    .container {
+      width: 700px;
+    }
+  } 
+
+  @media screen and (max-width: 743px) {
+    header h1 {
+      font-size: 40px;
+    }
+
+    .container {
+      width: 600px;
+    }
+  } 
+
+  @media screen and (max-width: 712px) {
+    header h1 {
+      font-size: 40px;
+    }
+
+    .container {
+      width: 400px;
+    }
+
+    .tools-board {
+      width: 150px;
+    }
+
+    footer {
+      width: 300px;
+    }
+
+
+  } 
+
+    @media screen and (max-width: 522px) {
+    header h1 {
+      font-size: 25px;
+    }
+
+    .container {
+      width: 300px;
+    }
+
+    .tools-board {
+      width: 150px;
+    }
+
+    footer {
+      display:none;
+    }
+
+
+  } 
+}
